Make backwards compatible with Java8 in order to test on SAP JVM.
Tested with:
* SAP Java Server VM (build 8.1.076 10.0.2+000, Jun 24 2021 15:22:13 - 81_REL - optU - bsd amd64 - 6 - bas2:328367 (mixed mode))
* Java HotSpot(TM) 64-Bit Server VM 18.9 (build 11.0.2+9-LTS, mixed mode)

NOT tested with client certificates yet!